Minor: Fix most layout issues with TabKit 2 * Tag #56 * Separates fixes file into two: one for Pale Moon and Basilisk * Also rearranges the chrome manifest file a bit * Increment ordinal group values to something higher to avoid overlaps

--- a/skin/css/aios.css
+++ b/skin/css/aios.css
@@ -218,23 +218,24 @@ sidebarheader > .close-icon.tabbable {
   -moz-box-ordinal-group: 9999;
 }
 
-/* Page Content Container */
-window[aiosOrient="left"] #appcontent {
-  -moz-box-ordinal-group: 15;
-}
-window[aiosOrient="right"] #appcontent {
-  -moz-box-ordinal-group: 1;
-}
-
 /* Sidebar splitter */
-#sidebar-splitter {
-  -moz-box-ordinal-group: 10;
+window[aiosOrient="left"] #sidebar-splitter {
+  -moz-box-ordinal-group: 5;
+}
+window[aiosOrient="right"] #sidebar-splitter {
+  -moz-box-ordinal-group: 70;
 }
 
 /** TGS Elements **/
 /* Orientation: Left Side */
+#appcontent {
+  -moz-box-ordinal-group: 50;
+}
 window[aiosOrient="left"] #aios-toggle-toolbox {
   -moz-box-ordinal-group: 1;
+}
+window[aiosOrient="left"] #aios-toolbox-left {
+  -moz-box-ordinal-group: 2;
 }
 window[aiosOrient="left"] #sidebar-box {
   -moz-box-ordinal-group: 3;
@@ -242,84 +243,24 @@ window[aiosOrient="left"] #sidebar-box {
 window[aiosOrient="left"] #aios-toolbox-right {
   -moz-box-ordinal-group: 4;
 }
-window[aiosOrient="left"] #aios-toolbox-left {
-  -moz-box-ordinal-group: 2;
-}
 
 /* Orientation: Right Side */
 window[aiosOrient="right"] #aios-toggle-toolbox {
-  -moz-box-ordinal-group: 15;
-}
-window[aiosOrient="right"] #sidebar-box {
-  -moz-box-ordinal-group: 12;
-}
-window[aiosOrient="right"] #aios-toolbox-right {
-  -moz-box-ordinal-group: 11;
+  -moz-box-ordinal-group: 74;
 }
 window[aiosOrient="right"] #aios-toolbox-left {
-  -moz-box-ordinal-group: 14;
+  -moz-box-ordinal-group: 73;
+}
+window[aiosOrient="right"] #sidebar-box {
+  -moz-box-ordinal-group: 72;
+}
+window[aiosOrient="right"] #aios-toolbox-right {
+  -moz-box-ordinal-group: 71;
 }
 
 /* Fix for invisible sidebar switch */
 window[aiosOrient="right"] #aios-toggle-toolbar {
   right: 0;
-}
-
-/*** Fixes for extensions using the direction hack ***/
-
-/** Tab Kit 2 **/
-
-/* Improperly positioned Tabs Toolbar and Splitter */
-#browser[dir] #TabsToolbar {
-  -moz-box-ordinal-group: 17 !important;
-}
-#browser[dir] #tabkit-splitter {
-  -moz-box-ordinal-group: 16 !important;
-}
-
-/** Adjust our positions accordingly **/
-/* Place the sidebar switch on the correct side */
-window[aiosOrient="left"] #browser[dir="reverse"] #aios-toggle-toolbox {
-  -moz-box-ordinal-group: 1;
-}
-window[aiosOrient="right"] #browser[dir="normal"] #aios-toggle-toolbox {
-  -moz-box-ordinal-group: 15;
-}
-
-/* Orientation: Left Side */
-window[aiosOrient="right"] #browser[dir="reverse"] #aios-toggle-toolbox {
-  -moz-box-ordinal-group: 1;
-}
-window[aiosOrient="right"] #browser[dir="reverse"] #sidebar-box {
-  -moz-box-ordinal-group: 3;
-}
-window[aiosOrient="right"] #browser[dir="reverse"] #aios-toolbox-right {
-  -moz-box-ordinal-group: 4;
-}
-window[aiosOrient="right"] #browser[dir="reverse"] #aios-toolbox-left {
-  -moz-box-ordinal-group: 2;
-}
-
-/* Orientation: Right Side */
-window[aiosOrient="left"] #browser[dir="reverse"] #aios-toggle-toolbox {
-  -moz-box-ordinal-group: 15;
-}
-window[aiosOrient="left"] #browser[dir="reverse"] #sidebar-box {
-  -moz-box-ordinal-group: 12;
-}
-window[aiosOrient="left"] #browser[dir="reverse"] #aios-toolbox-right {
-  -moz-box-ordinal-group: 11;
-}
-window[aiosOrient="left"] #browser[dir="reverse"] #aios-toolbox-left {
-  -moz-box-ordinal-group: 14;
-}
-
-/* Browser content */
-window[aiosOrient="right"] #browser[dir="reverse"] #appcontent {
-  -moz-box-ordinal-group: 15;
-}
-window[aiosOrient="left"] #browser[dir="reverse"] #appcontent {
-  -moz-box-ordinal-group: 1;
 }
 
 #aiosPopupset tooltip {
